--- a/Component/component.html
+++ b/Component/component.html
@@ -15,62 +15,43 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
     />
-    <link rel="stylesheet" href="CSS/component.css" />
+    <link rel="stylesheet" href="./CSS/component.css" />
   </head>
   <body>
     <div class="container" style="margin-top: 50px">
       <div class="row position-relative">
-        <div class="componen col-sm-3">
-          <div class="img">
-            <img src="images/01.jpg" alt="" style="max-width: 100%" />
-          </div>
-          <div class="block-description">
-            <h6 class="title">
-              <a href="#">Film 1</a>
-            </h6>
-            <div class="desc_movie d-flex align-items-center my-2">
-              <div class="badge badge-secondary mr-2">13+</div>
-              <span class="text-white" style="font-weight: bold">2h 30m</span>
-            </div>
-            <div class="btnPlay px-2 py-2">
-              <span> <i class="fas fa-play mr-1"></i>PLAY NOW</span>
-            </div>
-          </div>
-          <div class="actions">
-            <ul class="list-inline p-0 m-0 music-play-lists">
-              <li class="share">
-                <span><i class="fas fa-share-alt"></i></span>
-                <div class="share-box">
-                  <div class="d-flex align-items-center">
-                    <a
-                      href="https://www.facebook.com/sharer?u=https://iqonic.design/wp-themes/streamit_wp/movie/shadow/"
-                      target="_blank"
-                      rel="noopener noreferrer"
-                      class="share-ico"
-                      tabindex="0"
-                      ><i class="fab fa-facebook-f"></i
-                    ></a>
-                    <a
-                      href="https://twitter.com/intent/tweet?text=Currentlyreading"
-                      target="_blank"
-                      rel="noopener noreferrer"
-                      class="share-ico"
-                      tabindex="0"
-                      ><i class="fab fa-twitter"></i
-                    ></a>
-                  </div>
-                </div>
-              </li>
-              <li>
-                <span><i class="fas fa-heart"></i></span>
-                <span class="count-box">19+</span>
-              </li>
-              <li>
-                <span><i class="fas fa-plus"></i></span>
-              </li>
-            </ul>
-          </div>
-        </div>
+        <basic-para
+          avatar="/images/01.jpg"
+          href="Href-Film1"
+          name="Film1"
+          age="19"
+          time="2h 30m"
+          like="19"
+        ></basic-para>
+        <basic-para
+          avatar="/images/02.jpg"
+          href="Href-Film2"
+          name="Film2"
+          age="20"
+          time="3h 30m"
+          like="30"
+        ></basic-para>
+        <!-- <basic-para
+        avatar="/images/03.jpg"
+        href="Href-Film3"
+        name="Film3"
+        age="20"
+        time="3h"
+        like="20"
+      ></basic-para>
+      <basic-para
+        avatar="/images/04.jpg"
+        href="Href-Film4"
+        name="Film3"
+        age="21"
+        time="3h 30m"
+        like="30"
+      ></basic-para> -->
       </div>
     </div>
   </body>
@@ -89,4 +70,6 @@
     integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
     crossorigin="anonymous"
   ></script>
+  <script src="./JS/basic.js" type="module"></script>
+  <script src="./JS/style.js" type="module"></script>
 </html>
