fixed width component

--- a/Component/component.html
+++ b/Component/component.html
@@ -19,9 +19,9 @@
   </head>
   <body>
     <div class="container" style="margin-top: 50px">
-      <div class="row position-relative">
+      <div class="position-relative" style="display: flex">
         <basic-para
-          avatar="/images/01.jpg"
+          avatar="./images/01.jpg"
           href="Href-Film1"
           name="Film1"
           age="19"
@@ -29,29 +29,29 @@
           like="19"
         ></basic-para>
         <basic-para
-          avatar="/images/02.jpg"
+          avatar="./images/02.jpg"
           href="Href-Film2"
           name="Film2"
           age="20"
           time="3h 30m"
           like="30"
         ></basic-para>
-        <!-- <basic-para
-        avatar="/images/03.jpg"
-        href="Href-Film3"
-        name="Film3"
-        age="20"
-        time="3h"
-        like="20"
-      ></basic-para>
-      <basic-para
-        avatar="/images/04.jpg"
-        href="Href-Film4"
-        name="Film3"
-        age="21"
-        time="3h 30m"
-        like="30"
-      ></basic-para> -->
+        <basic-para
+          avatar="./images/03.jpg"
+          href="Href-Film3"
+          name="Film3"
+          age="20"
+          time="3h"
+          like="20"
+        ></basic-para>
+        <basic-para
+          avatar="./images/04.jpg"
+          href="Href-Film4"
+          name="Film3"
+          age="21"
+          time="3h 30m"
+          like="30"
+        ></basic-para>
       </div>
     </div>
   </body>
