--- a/src/html/css/style.css
+++ b/src/html/css/style.css
@@ -1245,3 +1245,30 @@ header .navbar ul li .sub-menu li:hover>a::before {
     transform: translate3d(0, 0, 0);
     transition: all 0.5s ease-in-out;
 }
+
+.mv-intro-user {
+  width: 200px;
+  border: 1px solid #ebebeb;
+  margin: 20px auto;
+  padding: 30px;
+}
+
+.mv-intro-user span {
+  display: block;
+  text-align: center;
+  margin: 0 auto;
+}
+
+.mv-intro-user span img {
+  width: 120px;
+  display: inline-block;
+  padding-top: 25%;
+}
+
+.mv-intro-list {
+  padding: 30px 0;
+}
+
+.mv-intro-list li {
+  list-style: none;
+}
