--- a/src/html/css/style.css
+++ b/src/html/css/style.css
@@ -1270,3 +1270,44 @@ header .navbar ul li .sub-menu li:hover>a::before {
 .mv-intro-list li {
   list-style: none;
 }
+
+.mv-actor-list h1 {
+  font-size: 28px;
+  margin-bottom: 20px;
+}
+
+.mv-actor-list ul {
+  padding: 0;
+}
+
+.mv-actor-list ul li {
+  list-style: none;
+  padding-right: 20px;
+  float: left;
+}
+
+.mv-actor-list ul li span {
+  display: block;
+  border-radius: 50%;
+}
+
+.mv-actor-list ul li span img {
+  display: inline-block;
+  max-width: 180px;
+  max-height: 180px;
+  border-radius: 50%;
+}
+
+.menu-item-expand {
+  display: block;
+  width: 500px;
+}
+
+.menu-expand-inner {
+  width: 500px;
+}
+
+.menu-expand-inner ul {
+  padding-right: 20px;
+  float: left;
+}
