--- a/src/html/css/style.css
+++ b/src/html/css/style.css
@@ -1247,7 +1247,7 @@ header .navbar ul li .sub-menu li:hover>a::before {
 }
 
 .mv-intro-user {
-  border: 1px solid #ebebeb;
+  /* border: 1px solid #ebebeb; */
   margin: 40px auto;
 }
 
@@ -1260,7 +1260,7 @@ header .navbar ul li .sub-menu li:hover>a::before {
 .mv-intro-user span img {
   width: 120px;
   display: inline-block;
-  padding: 25px 0;
+  /* padding: 25px 0; */
 }
 
 .mv-intro-list {
@@ -1293,8 +1293,8 @@ header .navbar ul li .sub-menu li:hover>a::before {
 
 .mv-actor-list ul li span img {
   display: inline-block;
-  max-width: 180px;
-  max-height: 180px;
+  max-width: 110px;
+  max-height: 110px;
   border-radius: 50%;
 }
 
